--- a/package.json
+++ b/package.json
@@ -10,9 +10,32 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/storage": "^13.0.1",
+    "@react-native-picker/picker": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "firebase": "^8.9.1",
+    "moment": "^2.29.1",
     "react": "17.0.2",
-    "react-native": "0.66.1"
+    "react-native": "0.66.1",
+    "react-native-card-stack-swiper": "^1.2.5",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.3.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-paper": "^4.10.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
+    "react-native-select-dropdown": "^1.4.0",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
